Updated styles. Added image. Testing dynamic js option

--- a/index.html
+++ b/index.html
@@ -9,21 +9,27 @@
 <body>
   <div class="loading-screen" id="loading">
     <div class="loader"></div>
+    <div class="loading-text">Loading Timeline...</div>
   </div>
+
   <div class="custom-cursor" id="cursor"></div>
+
   <div class="progress-bar">
     <div class="progress-fill" id="progressFill"></div>
   </div>
+
   <div class="particles" id="particles"></div>
+
   <section class="intro">
     <div class="intro-content">
       <h1 id="mainTitle">The Timeline of Inventions</h1>
-      <p id="subtitle">Scroll to explore the eras of human innovation</p>
+      <p id="subtitle">Discover the innovations that shaped our world</p>
     </div>
     <div class="scroll-indicator">
       <div class="scroll-arrow"></div>
     </div>
   </section>
+
   <main id="timeline">
     <nav class="timeline-sidebar">
       <ul>
@@ -33,43 +39,151 @@
         <li data-target="future">Future</li>
       </ul>
     </nav>
+
     <section class="era" id="stone-age">
-      <div class="background-layer background-stone-age"></div>
-      <div class="content">
-        <h2>Stone Age</h2>
-        <p>The dawn of human innovation. Fire brought warmth and protection, stone tools enabled hunting and crafting, and early cave paintings marked humanity's first artistic expressions.</p>
+      <div class="background-layer background-stone-age lazy-bg" data-bg="stone-age"></div>
+      <div class="era-content-wrapper">
+        <div class="main-content">
+          <h2>Stone Age</h2>
+          <p>The dawn of human innovation. Our ancestors discovered fire, crafted the first tools, and began expressing themselves through art, laying the foundation for all future technological advancement.</p>
+        </div>
+        <div class="inventions-grid">
+          <div class="invention-card" data-invention="fire">
+            <div class="invention-icon">🔥</div>
+            <div class="invention-title">Fire</div>
+            <div class="invention-year">~1.7 million years ago</div>
+            <div class="invention-description">Controlled use of fire revolutionized cooking, warmth, and protection.</div>
+          </div>
+          <div class="invention-card" data-invention="stone-tools">
+            <div class="invention-icon">🪨</div>
+            <div class="invention-title">Stone Tools</div>
+            <div class="invention-year">~2.6 million years ago</div>
+            <div class="invention-description">First manufactured tools for hunting, cutting, and crafting.</div>
+          </div>
+          <div class="invention-card" data-invention="cave-art">
+            <div class="invention-icon">🎨</div>
+            <div class="invention-title">Cave Art</div>
+            <div class="invention-year">~40,000 years ago</div>
+            <div class="invention-description">First artistic expressions and communication through visual symbols.</div>
+          </div>
+        </div>
       </div>
     </section>
+
     <section class="era" id="renaissance">
-      <div class="background-layer background-renaissance"></div>
-      <div class="content">
-        <h2>Renaissance</h2>
-      <p>An explosion of knowledge and creativity. The printing press democratized information, telescopes revealed the cosmos, and detailed anatomical studies advanced medicine.</p>
+      <div class="background-layer background-renaissance lazy-bg" data-bg="renaissance"></div>
+      <div class="era-content-wrapper">
+        <div class="main-content">
+          <h2>Renaissance</h2>
+          <p>A period of unprecedented intellectual and artistic flourishing. Revolutionary inventions transformed how knowledge was shared, the cosmos was understood, and the human body was studied.</p>
+        </div>
+        <div class="inventions-grid">
+          <div class="invention-card" data-invention="printing-press">
+            <div class="invention-icon">📖</div>
+            <div class="invention-title">Printing Press</div>
+            <div class="invention-year">1440</div>
+            <div class="invention-description">Gutenberg's press democratized knowledge and sparked the information age.</div>
+          </div>
+          <div class="invention-card" data-invention="telescope">
+            <div class="invention-icon">🔭</div>
+            <div class="invention-title">Telescope</div>
+            <div class="invention-year">1608</div>
+            <div class="invention-description">Opened the cosmos to human observation and scientific discovery.</div>
+          </div>
+          <div class="invention-card" data-invention="microscope">
+            <div class="invention-icon">🔬</div>
+            <div class="invention-title">Microscope</div>
+            <div class="invention-year">1590</div>
+            <div class="invention-description">Revealed the microscopic world and advanced medical understanding.</div>
+          </div>
+        </div>
       </div>
     </section>
+
     <section class="era" id="modern-age">
-      <div class="background-layer background-modern-age"></div>
-      <div class="content">
-        <h2>Modern Age</h2>
-        <p>The age of electricity transformed daily life, the internet connected the world, and space exploration expanded our horizons beyond Earth's boundaries.</p>
+      <div class="background-layer background-modern-age lazy-bg" data-bg="modern"></div>
+      <div class="era-content-wrapper">
+        <div class="main-content">
+          <h2>Modern Age</h2>
+          <p>The era of electricity, communication, and space exploration. These inventions connected the world, powered industry, and took humanity beyond Earth's boundaries.</p>
+        </div>
+        <div class="inventions-grid">
+          <div class="invention-card" data-invention="electricity">
+            <div class="invention-icon">⚡</div>
+            <div class="invention-title">Electricity</div>
+            <div class="invention-year">1879</div>
+            <div class="invention-description">Edison's light bulb illuminated the world and powered the modern age.</div>
+          </div>
+          <div class="invention-card" data-invention="internet">
+            <div class="invention-icon">🌐</div>
+            <div class="invention-title">Internet</div>
+            <div class="invention-year">1969</div>
+            <div class="invention-description">Connected humanity in an unprecedented global communication network.</div>
+          </div>
+          <div class="invention-card" data-invention="space-travel">
+            <div class="invention-icon">🚀</div>
+            <div class="invention-title">Space Travel</div>
+            <div class="invention-year">1957</div>
+            <div class="invention-description">Sputnik launched the space age and expanded human exploration.</div>
+          </div>
+        </div>
       </div>
     </section>
+
     <section class="era" id="future">
-      <div class="background-layer background-future"></div>
-      <div class="content">
-        <h2>Future</h2>
-        <p>Artificial intelligence augments human capability, space colonization becomes reality, and quantum computing solves previously impossible problems.</p>
+      <div class="background-layer background-future lazy-bg" data-bg="future"></div>
+      <div class="era-content-wrapper">
+        <div class="main-content">
+          <h2>Future</h2>
+          <p>Emerging technologies that will define tomorrow. AI augments human intelligence, quantum computing solves impossible problems, and space colonization expands our reach.</p>
+        </div>
+        <div class="inventions-grid">
+          <div class="invention-card" data-invention="ai">
+            <div class="invention-icon">🤖</div>
+            <div class="invention-title">Artificial Intelligence</div>
+            <div class="invention-year">2020s+</div>
+            <div class="invention-description">Machine learning and neural networks that augment human capabilities.</div>
+          </div>
+          <div class="invention-card" data-invention="quantum-computing">
+            <div class="invention-icon">⚛️</div>
+            <div class="invention-title">Quantum Computing</div>
+            <div class="invention-year">2010s+</div>
+            <div class="invention-description">Quantum mechanics applied to computation for exponential processing power.</div>
+          </div>
+          <div class="invention-card" data-invention="space-colonization">
+            <div class="invention-icon">🏗️</div>
+            <div class="invention-title">Space Colonization</div>
+            <div class="invention-year">2030s+</div>
+            <div class="invention-description">Establishing permanent human settlements beyond Earth.</div>
+          </div>
+        </div>
       </div>
     </section>
+
+    <div class="era-progress">
+      <div class="progress-dot" data-era="stone-age"></div>
+      <div class="progress-dot" data-era="renaissance"></div>
+      <div class="progress-dot" data-era="modern-age"></div>
+      <div class="progress-dot" data-era="future"></div>
+    </div>
   </main>
+
+  <div class="invention-modal" id="inventionModal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h2 class="modal-title" id="modalTitle">Invention Title</h2>
+        <button class="close-modal" id="closeModal">×</button>
+      </div>
+      <div class="modal-body" id="modalBody">
+      </div>
+    </div>
+  </div>
+
   <footer class="footer">
-    <p>&copy; 2025 Your Name. Built with modern web technologies.</p>
-    <p class="footer-note">Made for curious minds exploring human innovation.</p>
+    <p>&copy; 2025 Interactive Timeline. Built with modern web technologies.</p>
+    <p class="footer-note">Explore the innovations that shaped our world.</p>
   </footer>
-  
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-  
-  <script src="/src/js/main.js"></script>
+
+  <script type="module" src="/src/js/main.js"></script>
 </body>
 </html>
