Dynamic js data implemented in js, html, and css. Uploaded images for inventions

--- a/index.html
+++ b/index.html
@@ -47,26 +47,7 @@
           <h2>Stone Age</h2>
           <p>The dawn of human innovation. Our ancestors discovered fire, crafted the first tools, and began expressing themselves through art, laying the foundation for all future technological advancement.</p>
         </div>
-        <div class="inventions-grid">
-          <div class="invention-card" data-invention="fire">
-            <div class="invention-icon">🔥</div>
-            <div class="invention-title">Fire</div>
-            <div class="invention-year">~1.7 million years ago</div>
-            <div class="invention-description">Controlled use of fire revolutionized cooking, warmth, and protection.</div>
-          </div>
-          <div class="invention-card" data-invention="stone-tools">
-            <div class="invention-icon">🪨</div>
-            <div class="invention-title">Stone Tools</div>
-            <div class="invention-year">~2.6 million years ago</div>
-            <div class="invention-description">First manufactured tools for hunting, cutting, and crafting.</div>
-          </div>
-          <div class="invention-card" data-invention="cave-art">
-            <div class="invention-icon">🎨</div>
-            <div class="invention-title">Cave Art</div>
-            <div class="invention-year">~40,000 years ago</div>
-            <div class="invention-description">First artistic expressions and communication through visual symbols.</div>
-          </div>
-        </div>
+        <div class="inventions-grid"></div>
       </div>
     </section>
 
@@ -77,26 +58,7 @@
           <h2>Renaissance</h2>
           <p>A period of unprecedented intellectual and artistic flourishing. Revolutionary inventions transformed how knowledge was shared, the cosmos was understood, and the human body was studied.</p>
         </div>
-        <div class="inventions-grid">
-          <div class="invention-card" data-invention="printing-press">
-            <div class="invention-icon">📖</div>
-            <div class="invention-title">Printing Press</div>
-            <div class="invention-year">1440</div>
-            <div class="invention-description">Gutenberg's press democratized knowledge and sparked the information age.</div>
-          </div>
-          <div class="invention-card" data-invention="telescope">
-            <div class="invention-icon">🔭</div>
-            <div class="invention-title">Telescope</div>
-            <div class="invention-year">1608</div>
-            <div class="invention-description">Opened the cosmos to human observation and scientific discovery.</div>
-          </div>
-          <div class="invention-card" data-invention="microscope">
-            <div class="invention-icon">🔬</div>
-            <div class="invention-title">Microscope</div>
-            <div class="invention-year">1590</div>
-            <div class="invention-description">Revealed the microscopic world and advanced medical understanding.</div>
-          </div>
-        </div>
+        <div class="inventions-grid"></div>
       </div>
     </section>
 
@@ -107,26 +69,7 @@
           <h2>Modern Age</h2>
           <p>The era of electricity, communication, and space exploration. These inventions connected the world, powered industry, and took humanity beyond Earth's boundaries.</p>
         </div>
-        <div class="inventions-grid">
-          <div class="invention-card" data-invention="electricity">
-            <div class="invention-icon">⚡</div>
-            <div class="invention-title">Electricity</div>
-            <div class="invention-year">1879</div>
-            <div class="invention-description">Edison's light bulb illuminated the world and powered the modern age.</div>
-          </div>
-          <div class="invention-card" data-invention="internet">
-            <div class="invention-icon">🌐</div>
-            <div class="invention-title">Internet</div>
-            <div class="invention-year">1969</div>
-            <div class="invention-description">Connected humanity in an unprecedented global communication network.</div>
-          </div>
-          <div class="invention-card" data-invention="space-travel">
-            <div class="invention-icon">🚀</div>
-            <div class="invention-title">Space Travel</div>
-            <div class="invention-year">1957</div>
-            <div class="invention-description">Sputnik launched the space age and expanded human exploration.</div>
-          </div>
-        </div>
+        <div class="inventions-grid"></div>
       </div>
     </section>
 
@@ -137,26 +80,7 @@
           <h2>Future</h2>
           <p>Emerging technologies that will define tomorrow. AI augments human intelligence, quantum computing solves impossible problems, and space colonization expands our reach.</p>
         </div>
-        <div class="inventions-grid">
-          <div class="invention-card" data-invention="ai">
-            <div class="invention-icon">🤖</div>
-            <div class="invention-title">Artificial Intelligence</div>
-            <div class="invention-year">2020s+</div>
-            <div class="invention-description">Machine learning and neural networks that augment human capabilities.</div>
-          </div>
-          <div class="invention-card" data-invention="quantum-computing">
-            <div class="invention-icon">⚛️</div>
-            <div class="invention-title">Quantum Computing</div>
-            <div class="invention-year">2010s+</div>
-            <div class="invention-description">Quantum mechanics applied to computation for exponential processing power.</div>
-          </div>
-          <div class="invention-card" data-invention="space-colonization">
-            <div class="invention-icon">🏗️</div>
-            <div class="invention-title">Space Colonization</div>
-            <div class="invention-year">2030s+</div>
-            <div class="invention-description">Establishing permanent human settlements beyond Earth.</div>
-          </div>
-        </div>
+        <div class="inventions-grid"></div>
       </div>
     </section>
 
